css/main.css
/* ... */
.genasys-splash-logo{
	margin: auto;
}

.splash-text {
	color: #A3A3A5;
	max-width: 620px;
	margin: auto;
	padding-top: 50px;
	padding-bottom: 50px;
}

.splash-row {
	max-width: 620px;
	margin: auto;
	padding-top: 30px;
	color: white;

}

.splash-submit{
	background-color: #829DB2 !important;
	border: 1px solid #829DB2 !important;
    border-radius: 2px !important;
 	width: 80%;
 	color: black !important;
 	height: 35px;
 	padding: 0px !important; 
 	position: relative;
}

.splash-text a{
	outline: 0 !important;
	color: #EB2027 !important;
}

.splash-text a:hover, a:visited, a:active{
	color: #BB2227;
}

.div-float-text {
    top: 0px;
    position: absolute;
    left: 0px;
    width: 100%;
    height: 100%;
    text-align: center;
    z-index: 9;
    padding: 6px;
}

.invis-float-img{
	width: 100%; height: 35px; 
    top: 0px;
    position: absolute;
    left: 0px; 
    z-index: 10;
}

#stats-section {
	background-color: #445565;
    padding-top: 80px;
    padding-bottom: 250px;
    text-align: center;
    color: white;

}

.stats-box-outer {
	height: 250px;
	/*padding: 20px;*/
	margin-bottom: 40px;
	padding: 35px 0px 0px 0px;
}

.stats-box-inner:hover {
	cursor: pointer;
	-webkit-box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.5);
	-moz-box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.5);
	box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.5);
	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
	transform: scale(1.05);
    -webkit-transition: 0.2s;
    -moz-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
}

.stats-box-outer p{
	color: white;
	margin: 0px;

}

.stats-box-inner {
	padding-top: 15px;
	max-width: 250px;
	margin: auto;
	border: 1px solid white;
	height: 100%;
}

.box1-count{
	margin: 0 0 10px !important;
	font-size: 60px;
	vertical-align: center;
	text-align: center;
	line-height: 0px !important;
	color:white;
}

.box2-sm{
	line-height: 35px;	
	font-size: 26px;
	color:#ccc !important;
}

.box2-md{
	line-height: 35px;
	font-size: 30px;
	color:white !important;	
}

.box4-count {
	font-size: 50px;
	padding-top: 35px;
}

.box4-sub {
	font-size: 36px;
    margin-left: -20px !important;
    font-weight: 200;
    line-height: 10px;
}
 
.stats-subheading {
	padding: 15px;
}

.users-icon {
	line-height: 110px !important;
	color:white;
}

#chart1-section {
	background-color: #BD2228;
    padding-top: 80px;
    padding-bottom: 250px;
    text-align: center;
    color: white;

}

.chart1-padding{
	height:50px;
	width: 100%;
}

#chart1 {
	height: 350px !important;
	width: 700px !important;
}
#chart1sm {
	height: 100% !important;
	width: auto !important;
}
#timeline {
	background-color: #fff;
    padding-top: 80px;
    text-align: center;

}

#chart2-section {
	background-color: #445565;
    padding-top: 80px;
    padding-bottom: 250px;
    text-align: center;
    color: white;

}

.chart2-padding{
	height:50px;
	width: 100%;
}

#chart2 {
	height: 350px !important;
	width: 700px !important;
}

#chart2sm {
	height: 100% !important;
	width: auto !important;
}

#logos-section{
    padding-top: 80px;
    padding-bottom: 80px;
    text-align: center;
	background: url("../elements/general_build/splash-bottom.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
	background-color: #222;


}

#twitter_wrap{
	margin-top: 150px !important;

}
canvas{
    width: 100% !important;
    height: auto !important;
}

.flickity-page-dots .dot {
	width: 13px !important;
	height: 13px !important;
	margin: 0 12px !important;
	background: #445565 !important;
}

.flickity-page-dots .dot.is-selected {
	background: #BC2228 !important;
} 
.flickity-page-dots {
	bottom: -65px !important; 
}
/*=========== END INDEX NEW ============*/


/*=========START NEW TIMELINE===========*/

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}


#Steps{
	height: auto;
	padding: 50px 20px 50px 20px;
}

.steps-name{
	padding-top:10px;
}

.section-header, .steps-header, .steps-name {
  color: #3498DB;
  font-weight: 400;
  font-size: 1.4em;
}

.steps-header {
  margin-bottom: 20px;
  text-align: center;
}

.steps-timeline {
  outline: 1px dashed rgba(255, 0, 0, 0);
}
@media screen and (max-width: 500px) {
  .steps-timeline {
    border-left: 2px solid #3498DB;
    margin-left: 25px;
  }
}
@media screen and (min-width: 500px) {
  .steps-timeline {
    border-top: 2px solid #3498DB;
    padding-top: 20px;
    margin-top: 40px;
    margin-left: 16.65%;
    margin-right: 16.65%;
  }
}
.steps-timeline:after {
  content: "";
  display: table;
  clear: both;
}

.steps-one,
.steps-two,
.steps-three {
  outline: 1px dashed rgba(0, 128, 0, 0);
}
@media screen and (max-width: 500px) {
  .steps-one,
  .steps-two,
  .steps-three {
    margin-left: -25px;
  }
}
@media screen and (min-width: 500px) {
  .steps-one,
  .steps-two,
  .steps-three {
    float: left;
    width: 33%;
    margin-top: -50px;
  }
}

@media screen and (max-width: 500px) {
  .steps-one,
  .steps-two {
    padding-bottom: 40px;
  }
}

@media screen and (min-width: 500px) {
  .steps-one {
    margin-left: -16.65%;
    margin-right: 16.65%;
  }
}

@media screen and (max-width: 500px) {
  .steps-three {
    margin-bottom: -100%;
  }
}
@media screen and (min-width: 500px) {
  .steps-three {
    margin-left: 16.65%;
    margin-right: -16.65%;
  }
}

.steps-img {
  display: block;
  margin: auto;
  width: 50px;
  height: 50px;
  border-radius: 50%;
}
@media screen and (max-width: 500px) {
  .steps-img {
    float: left;
    margin-right: 20px;
  }
}

.steps-name,
.steps-description {
  margin: 0;
}

@media screen and (min-width: 500px) {
  .steps-name {
    text-align: center;
  }
}

.steps-description {
  overflow: hidden;
}
@media screen and (min-width: 500px) {
  .steps-description {
    text-align: center;
  }
}
/* ... */

